--- a/VRChat/64/1098664.html
+++ b/VRChat/64/1098664.html
@@ -104,9 +104,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/34d02bac3ae4f808674f.js" defer=
+    "https://asset.booth.pm/assets/d0b74dab23351869d989.js" defer=
     "defer" nonce=
-    "zxTyr+qboplCgD/s69G0EBrK/yqJR4t/IDYBhm43AKk="></script>
+    "eny19gnWn6TWzyljq4nPDq92E/Q5QyOeScgD1bLS0vQ="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"おきゅみん VR缶バッジ＆リング","description":"おきゅたんbotのファン「おきゅみん（おきゅ民）」向けのファングッズです。バーチャルなデータとしてのグッズ（FBXモデル、テクスチャ、シェーダーなど）なので、注意してね。\n\nおきゅたんやVR好き、応援してるーって方で、気に入った方は、各種ソーシャルVRなどでアバターにつけたり、飾ったりしてみてね！　アレンジしてもいいよ！\n\n・商用／非商用問わず利用可。収益化動画への映り込みも大丈夫。\n・改変可。大きさとかも自由に変えてね！\n・Unityで利用可能な形で再配布するときは、こちらの元データBOOTH URLと名前をドキュメントか何かに書いてね。\n・迷惑行為などへの利用は禁止だよ。\n\n別のデザインのおきゅみんグッズ作ったーとかあれば、ぜひ教えてね。\n\n※つけてないから応援してないっ　とかそんなことはないからね！\nいろいろアバターの世界観とかポリゴン制限もあるし！\n\n\n★使い方\n\n① OcuminGoods.unitypackageをダブルクリックするなどして、Unityのプロジェクトにインポート\n\n② OcuminGoodsの中にある、OcuminGoodsシーンを開いてグッズを確認\n\n③ アバターの付けたい場所のTransformの位置に、OcuminGoods/OcuminBadge/Prefabsの中にあるバッジのプレファブか、OcuminGoods/OcuminRingの中のOcuminRingプレファブを配置して、アバターを更新する\n\n\n★スペシャルサンクス\n\nこのファングッズは、下記のおきゅみん（というか１名原作者！）のみなさんの協力のもと、制作されました。\n\nおきゅたんイラスト：まいてぃ999さん\nhttps://twitter.com/mighty999\n\n缶バッジモデル：立川 弓月 / メロンパンさん\nhttps://twitter.com/Yuzuki_Tatikawa \n\nリング（腕輪）モデル、シェーダー：オノッチ / 鹿さん\nhttps://twitter.com/onotchi_\n\n本当にありがとー！\n\n\n★関連リンク\n\nおきゅたんbot\nhttps://twitter.com/OculusTan\n\nVRすきま動画\nhttps://www.youtube.com/c/OcutanBotVRChannel\n\nおきゅたんbot 公式\nhttps://ocutanbot.wixsite.com/ocutan\n\nまいてぃ999さん（おきゅたん / VRすきまガールズ 漫画原作者）\nhttps://twitter.com/mighty999","url":"https://booth.pm/ja/items/1098664","offers":{"priceCurrency":"JPY","@type":"Offer","price":"0"},"image":"https://booth.pximg.net/c/620x620/00e145f9-56bb-4d61-a781-aec554e36161/i/1098664/a887c301-e972-41c7-b837-cfa93a9c05b5_base_resized.jpg"}
     </script>
@@ -117,7 +117,7 @@
     src="//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="zxTyr+qboplCgD/s69G0EBrK/yqJR4t/IDYBhm43AKk="></script>
+    nonce="eny19gnWn6TWzyljq4nPDq92E/Q5QyOeScgD1bLS0vQ="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -592,7 +592,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;},{&quot;label&quot;:&quot;デザインフェスタ vol.57&quot;,&quot;value&quot;:&quot;designfesta57&quot;}]"
+    "[{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;},{&quot;label&quot;:&quot;ドールショウ69夏&quot;,&quot;value&quot;:&quot;dollshow69&quot;},{&quot;label&quot;:&quot;第八回技術書同人誌博覧会&quot;,&quot;value&quot;:&quot;gishohaku8&quot;},{&quot;label&quot;:&quot;#エアブー230528&quot;,&quot;value&quot;:&quot;air-boo-0528&quot;},{&quot;label&quot;:&quot;COMIC CITY 大阪124&quot;,&quot;value&quot;:&quot;comiccity-osaka124&quot;},{&quot;label&quot;:&quot;関西コミティア67&quot;,&quot;value&quot;:&quot;k-comitia67&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
